<resources>
    <string name="app_name">Drona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_birthday">Birthday</string>
    <string name="menu_add_student">Add Student</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_utility">Utility</string>
    <string name="add_student_for_today_s_attendance">Add Student for today\'s Attendance</string>
</resources>