<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@+id/nav_profile">


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.amtron.dronamma.fragment.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_birthday"
        android:name="com.amtron.dronamma.fragment.BirthdayFragment"
        android:label="@string/menu_birthday"
        tools:layout="@layout/fragment_birthday" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.amtron.dronamma.fragment.Settings"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_utility"
        android:name="com.amtron.dronamma.fragment.Utility"
        android:label="@string/menu_utility"
        tools:layout="@layout/fragment_utility" />

    <fragment
        android:id="@+id/nav_add_inventory"
        android:name="com.amtron.dronamma.fragment.AddInventory"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_add_inventory" />

</navigation>