<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/addStudent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation">

    <fragment
        android:id="@+id/addStudent"
        android:name="com.amtron.dronamma.fragment.AddStudent"
        android:label="@string/menu_add_student"
        tools:layout="@layout/fragment_add_student" />

    <fragment
        android:id="@+id/attendance"
        android:name="com.amtron.dronamma.fragment.Attendance"
        android:label="@string/menu_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/payment"
        android:name="com.amtron.dronamma.fragment.Payment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />

</navigation>